# leapconnect

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DashboardTab.vue  DestinationModal.vue  DetailsTab.vue  Dockerfile  HistoryTab.vue  LocationCard.vue  README.md  ServicesSetupView.vue  abrp.py  alembic.ini  docker-compose.yml  fly.toml  generate-traefik-certs.sh  main.py  models.py  mqtt_ha.py  package-lock.json  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: ci.yml  docker-publish.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: BatteryCharging.vue  CarImage.vue  CarImageHero.vue  CarSVG.vue  ChargeScheduleModal.vue  ClimateCard.vue  ClimateControlModal.vue  ClimateScheduleModal.vue  CloudStatsView.vue  ConfirmDialog.vue  ConnectivityCard.vue  ControlButton.vue  DestinationModal.vue  DoorsWindows.vue  DynamicCarImage.vue  FotaModal.vue  HeroStrip.vue  HistorySkeleton.vue  InfoRow.vue  LocationCard.vue  LogViewer.vue  MediaControlModal.vue  MessageDropdown.vue  MileageEnergy.vue  PinDialog.vue  RawData.vue  RemoteControls.vue  SeatControlModal.vue  SectionCard.vue  SpeedLimitModal.vue  StatCard.vue  SunshadeControlModal.vue  TirePressure.vue  ToastContainer.vue  ToggleSwitch.vue  TopBar.vue  VehicleInfo.vue  VehicleTabs.vue  WindowControlModal.vue
frontend/src/components/icons/: TrunkOpenIcon.vue
frontend/src/composables/: useApi.js  useToast.js
frontend/src/stores/: appStore.js
frontend/src/utils/: formatters.js
frontend/src/views/: AccountSetupView.vue  CertificateSetupView.vue  DashboardTab.vue  DashboardView.vue  DetailsTab.vue  HistoryTab.vue  LoginView.vue  MessagesTab.vue  ServicesSetupView.vue  SettingsTab.vue  UserSetupView.vue  VehicleSelectorView.vue
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_add_power_columns.py  0003_add_regening_column.py  0004_add_vehicle_events.py  0005_add_notifications.py  0006_add_telegram_users.py
persistence/: repository.py  scheduler.py  sqlite_adapter.py
services/: abrp.py  mqtt_ha.py  notification_dispatcher.py  scheduler.py  telegram_bot.py  telegram_config.py  transition_detector.py  vehicle_cache.py
services/notifiers/: __init__.py  telegram.py
static/: index.html
tests/: conftest.py  test_api.py
