[project]
name = "leapconnect"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "leapmotor-api>=0.1.0",
    "Pillow>=10.0.0",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port 8099"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
